# DiscordCustomPresence

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
crates/rpc-core/: Cargo.toml
crates/rpc-core/src/: lib.rs
native/: Cargo.toml
native/src/: main.rs
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  rpc.rs
