[package]
name = "custom_rich_presence"
version = "0.1.0"
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
libc = "0.2"

# HTTP para pegar App Icon (via /oauth2/applications/{id}/rpc)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }


